Fixed link div overlapping timers
Timers now overlap link div

--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,7 @@ a, #new-timers-span {
 /* links */
 
 #links {
+  z-index: -10;
   position: absolute;
   top: 1;
   right: 0;
